--- a/css/main.css
+++ b/css/main.css
@@ -2331,6 +2331,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 .banner-area {
   background: url(../img/header-bg.jpg) center;
   background-size: cover;
+  height: 80vh;
 }
 
 @media (max-width: 767.98px) {
